# engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_STYLE.TXT  README  README.md  Rendering Plan.txt  TODO  TODO.txt  cloc  config.h.in  debug.sh  gfx_device_vulkan (2).cpp  prebuild.sh  release.sh  run.sh
.github/workflows/: cmake.yml
doc/: blender_template.blend  blender_template.blend1  template.blend
graphics/: CMakeLists.txt
graphics/include/: gfx.hpp  gfx_api.h  gfx_device.hpp
graphics/src/: gfx_device.cpp
include/: application.h  application.hpp  application_component.h  component_custom.h  component_mesh.h  component_transform.h  debug_line.h  ecs.h  ecs_system.h  ecs_system.hpp  engine.hpp  engine_api.h  entity.h  event_system.h  event_system.hpp  export.h  file_dialog.h  files.h  gen_tangents.h  gfx.h  gfx.hpp  gfx_device.h  gfx_device.hpp  gltf_loader.h  input.hpp  input_keys.h  input_manager.h  input_manager.hpp  input_mouse.h  log.h  log.hpp  logger.h  logger.hpp  object.hpp  physics.h  renderer.h  resource_font.h  resource_manager.h  resource_manager.hpp  resource_material.h  (+21 more)
include/components/: camera.hpp  collider.h  collider.hpp  component.hpp  custom.h  custom.hpp  mesh_renderable.h  mesh_renderer.hpp  renderable.h  renderable.hpp  renderable_text.h  text_renderable.h  text_ui_renderer.hpp  transform.h  transform.hpp  ui_element.h  ui_element.hpp  ui_renderable.h
include/ecs/: ecs_system.hpp  mesh_renderer.hpp  transform.hpp
include/inputs/: keyboard.h  keyboard.hpp  mouse.h  mouse.hpp
include/resources/: font.h  font.hpp  material.h  material.hpp  mesh.h  mesh.hpp  resource.hpp  shader.h  shader.hpp  texture.h  texture.hpp
include/systems/: collisions.h  collisions.hpp  custom_behaviour.h  mesh_render_system.h  render.h  render.hpp  render2d.h  render2d.hpp  text_render_system.h  transform.h  transform.hpp  ui.h  ui.hpp  ui_render_system.h
include/util/: file_dialog.h  files.h  files.hpp  gen_tangents.h  gltf_loader.h  model_loader.h  model_loader.hpp
renderer/: CMakeLists.txt
res/engine/shaders/: basic.frag  debug.frag  debug.vert  fancy.frag  fancy.vert  font.frag  quad.frag  quad.vert  shadow.frag  shadow.vert  showNormals.frag  showNormals.vert  showUVs.frag  showUVs.vert  skybox.frag  skybox.vert  standard.frag  standard.vert  test.frag  test.vert  texture.vert  textured.vert
src/: _resource_manager.cpp  application.cpp  application_component.cpp  ecs.cpp  ecs_system.cpp  engine.cpp  event_system.cpp  file_dialog.cpp  files.cpp  gen_tangents.cpp  gfx_device.cpp  gfx_device_null.cpp  gfx_device_opengl45.cpp  gfx_device_vulkan.cpp  gltf_loader.cpp  input.cpp  input_manager.cpp  object.cpp  physics.cpp  renderer.cpp  resource_font.cpp  resource_manager.cpp  resource_material.cpp  resource_mesh.cpp  resource_shader.cpp  resource_texture.cpp  scene.cpp  scene_manager.cpp  sceneroot.cpp  system_collisions.cpp  system_custom_behaviour.cpp  system_mesh_render.cpp  system_transform.cpp  texture.cpp  texture_manager.cpp  vulkan_allocator.cpp  vulkan_device.cpp  vulkan_instance.cpp  vulkan_swapchain.cpp  window.cpp
src/components/: camera.cpp  component.cpp  custom.cpp  mesh_renderer.cpp  text_ui_renderer.cpp  transform.cpp
src/imgui/: imconfig.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_tables.cpp
src/libs/: mikktspace.c  stb_truetype.cpp  tiny_gltf_impl.cpp
src/resources/: font.cpp  material.cpp  mesh.cpp  resource.cpp  shader.cpp  texture.cpp
src/systems/: collisions.cpp  custom_behaviour.cpp  mesh_render_system.cpp  physics.cpp  render.cpp  render2d.cpp  text_render_system.cpp  transform.cpp  ui.cpp  ui_render_system.cpp
src/util/: files.cpp  gen_tangents.cpp  gltf_loader.cpp  model_loader.cpp
src/vulkan/: device.cpp  device.h  gpu_allocator.cpp  gpu_allocator.h  instance.cpp  instance.h  swapchain.cpp  swapchain.h
test/: CMakeLists.txt  README  config.h  config.h.in  game.aps
test/res/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
test/res/meshes/: castle_0.mesh  castle_1.mesh  castle_2.mesh  castle_3.mesh  castle_4.mesh  castle_5.mesh  cube.mesh  donut.mesh  gun.mesh  monke.mesh  pyramid.mesh
test/res/models/: MY_AXES.dae  MY_AXES.glb  Map #4.002.tga  cube.glb  far_away_cube.dae  hedra.glb  monke.glb  normalmaptest.glb  normalmaptest_notang.glb  redcube.glb  stairs.glb  teapot.dae  teapot.glb  teapot_with_tangents.glb  terrain.dae  test_scene.dae  tree.glb  uvcheck.dae  uvsphere.dae
test/res/models/cobble_house/: cobble_house.dae
test/res/models/cube/: cube.dae
test/res/models/lego/: lego.dae
test/res/models/pyramid/: pyramid.dae
test/res/models/room/: room.dae
test/res/models/van/: van.dae
test/res/shaders/: basic.frag  basic.vert  font.frag  font.vert  texture.frag  texture.vert
test/res/textures/: grass_sRGB_scene-linear Rec.709-sRGB.jpg.tx
test/src/: camera_controller.cpp  camera_controller.hpp  game.cpp  game.hpp  main.cpp  meshgen.cpp  meshgen.hpp  terrain.cpp  terrain.h  terrain.hpp
